RESOLVED FIXED136942
REGRESSION(r173464): It broke the !ENABLE(PICTURE_SIZES) build
https://bugs.webkit.org/show_bug.cgi?id=136942
Summary REGRESSION(r173464): It broke the !ENABLE(PICTURE_SIZES) build
Csaba Osztrogonác
Reported 2014-09-19 01:47:25 PDT
build log: /home/webkit/WebKit/Source/WebCore/html/HTMLImageElement.cpp: In member function ‘virtual void WebCore::HTMLImageElement::parseAttribute(const WebCore::QualifiedName&, const WTF::AtomicString&)’: /home/webkit/WebKit/Source/WebCore/html/HTMLImageElement.cpp:150:9: error: too few arguments to function ‘WebCore::ImageCandidate WebCore::bestFitSourceForImageAttributes(float, const WTF::AtomicString&, const WTF::AtomicString&, unsigned int)’ ); ^
Attachments
Patch (2.07 KB, patch)
2014-09-19 02:14 PDT, Éva Balázsfalvi
no flags
Éva Balázsfalvi
Comment 1 2014-09-19 02:14:05 PDT
WebKit Commit Bot
Comment 2 2014-09-19 11:48:47 PDT
Comment on attachment 238363 [details] Patch Clearing flags on attachment: 238363 Committed r173767: <http://trac.webkit.org/changeset/173767>
WebKit Commit Bot
Comment 3 2014-09-19 11:48:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.