REGRESSION(r173464): It broke the !ENABLE(PICTURE_SIZES) build https://bugs.webkit.org/show_bug.cgi?id=136942

Reviewed by Simon Fraser.

* html/HTMLImageElement.cpp:
(WebCore::HTMLImageElement::parseAttribute):


Canonical link: https://commits.webkit.org/154771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173767 268f45cc-cd09-0410-ab3c-d52691b4dbfc